--- a/121024-HFES/HFES12-wdg-Beamer.tex
+++ b/121024-HFES/HFES12-wdg-Beamer.tex
@@ -135,9 +135,9 @@
 \DeclareLanguageMapping{american}{american-apa}
 
 
-\addbibresource{mini.bib} %%%NAME OF SAMPLE BIB
+%\addbibresource{mini.bib} %%%NAME OF SAMPLE BIB
 
-%% \addbibresource{/Users/GrayMatter/Library/texmf/tex/wdg_master_Bib.bib} %my default biblatex file
+\addbibresource{/Users/GrayMatter/Library/texmf/tex/wdg_master_Bib.bib} %my default biblatex file
 
 \setlength{\bibhang}{1.5em}  %%% adjusts the hanging indent size
 
@@ -270,7 +270,7 @@
 \end{itemize}
 
 \begin{textblock}{13}(1,3)
-	\fullcitebib{terlecki08acp.jou,kirsh94cs.jou,maglio08ap.jou}
+	\fullcitebib{terlecki08acp,kirsh94csj,maglio08actaPsyc}
 \end{textblock}
 	
 \end{frame}
